--- a/templates/add.html
+++ b/templates/add.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <title>Add an entryr</title>
+    <link rel="stylesheet"
+          type="text/css"
+          href="static/css/style.css">
   </head>
   <body>
     <h1>Add Entry for {{user}}</h1>
