--- a/templates/error.html
+++ b/templates/error.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <title>Login Error</title>
+    <link rel="stylesheet"
+          type="text/css"
+          href="static/css/style.css">
   </head>
   <body>
     {{msg}}
