--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <title>My Profile</title>
+    <link rel="stylesheet"
+          type="text/css"
+          href="static/css/style.css">
   </head>
   <body>
   Welcome {{user}}!
