--- a/templates/results.html
+++ b/templates/results.html
@@ -5,6 +5,9 @@
       <title>
       Results
       </title>
+      <link rel="stylesheet"
+            type="text/css"
+            href="static/css/style.css">
   </head>
   <body>
   <br>
@@ -42,6 +45,6 @@
       <br>
       <br>
   {% endfor %}
-  
+
   </body>
 </html>
