--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,6 +5,9 @@
       <title>
       Welcome!
       </title>
+      <link rel="stylesheet"
+            type="text/css"
+            href="static/css/style.css">
   </head>
   <body>
     <h1>
