--- a/templates/add.html
+++ b/templates/add.html
@@ -5,7 +5,7 @@
     <title>Add an entryr</title>
     <link rel="stylesheet"
           type="text/css"
-          href="static/css/style.css">
+          href="/static/css/centered.css">
   </head>
   <body>
     <h1>Add Entry for {{user}}</h1>
