--- a/templates/create.html
+++ b/templates/create.html
@@ -7,7 +7,7 @@
       </title>
       <link rel="stylesheet"
             type="text/css"
-            href="static/css/style.css">
+            href="static/css/centered.css">
   </head>
   <body>
     <h1>
