--- a/templates/error.html
+++ b/templates/error.html
@@ -5,7 +5,7 @@
     <title>Login Error</title>
     <link rel="stylesheet"
           type="text/css"
-          href="static/css/style.css">
+          href="/static/css/centered.css">
   </head>
   <body>
     {{msg}}
