--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,7 @@
     <title>Homepage</title>
     <link rel="stylesheet"
           type="text/css"
-          href="static/css/style.css">
+          href="/static/css/main.css">
   </head>
   <body>
   {% with messages = get_flashed_messages() %}
