--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
     <title>My Profile</title>
     <link rel="stylesheet"
           type="text/css"
-          href="static/css/style.css">
+          href="/static/css/profile.css">
   </head>
   <body>
   Welcome {{user}}!
